# icici-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  run.sh  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/icici_mcp/: __init__.py  auth.py  cli.py  server.py
tests/: test_auth.py  test_cli.py  test_server.py
